# gitmuse

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  gitmuse-schema.json  gitmuse.json  gitmuse_example.json  package-lock.json  package.json  pyproject.toml
.github/workflows/: ci.yml  lint_typecheck.yml  release.yml  tests.yml
example_templates/: commit_message.txt
gitmuse/: __main__.py  cli.py  models.py
gitmuse/ai/: gpt_integration.py
gitmuse/cli/: __init__.py  banner.py  cli_core.py  commands.py  ui.py
gitmuse/config/: gitmuse-schema.json  settings.py
gitmuse/core/: diff_analyzer.py  git_utils.py  message_generator.py
gitmuse/providers/: base.py  ollama.py  openai.py
gitmuse/ui/: console_ui.py
gitmuse/utils/: check_hardware.py  logging.py  model_requirements.py
